added ticket prices and diretors message

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Temasek Theatrette Labyrith Coldridge"
+      content="Temasek Theatrette Labyrinth Coldridge"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/TheatretteIcon.png" />
     <!--
